# internal/domain/entity/chat.go
@@ -17,14 +17,19 @@ type Message struct {
 	ChatID    uuid.UUID
 	Question  string
 	Answer    string
+	Category  string
 	CreatedAt time.Time
 }
 
-func NewMessage(chatID uuid.UUID, question string, answer string) *Message {
+func NewMessage(chatID uuid.UUID, question string, answer string, category string) *Message {
 	return &Message{
 		ID:        uuid.New(),
 		CreatedAt: time.Now(),
-		ChatID:    chatID, Question: question, Answer: answer}
+		ChatID:    chatID,
+		Question:  question,
+		Answer:    answer,
+		Category:  category,
+	}
 }
 
 type Answer struct {
